--- a/css/base.css
+++ b/css/base.css
@@ -49,6 +49,6 @@ li{
   line-height: 1.5;
 }
 @media screen and (max-width: 600px) {
-body { padding:10px;}
+body { padding:10px;max-width:100px}
 
 }
