--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,3 @@
-
-
 body {
   padding: 50px 100px;
   max-width:700px;
@@ -44,6 +42,12 @@ hr.small {
   border-width: 4px;
   border-color: white;
 }
+hr {
+  border:2px solid #ea541f;
+  margin:0 0 0 0;
+  width:70%;
+  text-align:center;
+}
 li{
   margin-top:.5em;
   line-height: 1.5;
@@ -51,4 +55,12 @@ li{
 @media screen and (max-width: 600px) {
 body { padding:10px;max-width:100%}
 
+}
+.side-nav a {
+  font-size:15px;
+  color: #666;
+}
+figcaption {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size:14px;
 }
